--- a/content/chi-siamo.html
+++ b/content/chi-siamo.html
@@ -16,10 +16,10 @@ backgroundImage: "/images/nuove/38.jpg"
   </div>
 </div>
 
-{{< stripe class="grid-cols-3 sm:grid-cols-4" >}}
-  {{< image src="/images/nuove/16.jpg" class="col-span-1 sm:col-span-2" >}}
-  {{< image src="/images/pezzi-cilindro-telescopico.jpg" class="col-span-1" >}}
-  {{< image src="/images/pezzi-rev.jpg" class="col-span-1" >}}
+{{< stripe class="sm:grid-cols-4 gap-4" >}}
+  {{< image src="/images/nuove/16.jpg" class="sm:col-span-2" >}}
+  {{< image src="/images/pezzi-cilindro-telescopico.jpg" class="sm:col-span-1" >}}
+  {{< image src="/images/pezzi-rev.jpg" class="sm:col-span-1" >}}
 {{< /stripe >}}
 
 <!-- Aree di competenza -->
