--- a/content/chi-siamo.html
+++ b/content/chi-siamo.html
@@ -16,11 +16,11 @@ backgroundImage: "/images/nuove/38.jpg"
   </div>
 </div>
 
-{{< stripe class="sm:grid-cols-4 gap-4" >}}
-  {{< image src="/images/nuove/16.jpg" class="sm:col-span-2" >}}
+{{< gallery class="sm:grid-cols-3 lg:grid-cols-4" >}}
+  {{< image src="/images/nuove/16.jpg" class="sm:col-span-1 lg:col-span-2" >}}
   {{< image src="/images/pezzi-cilindro-telescopico.jpg" class="sm:col-span-1" >}}
   {{< image src="/images/pezzi-rev.jpg" class="sm:col-span-1" >}}
-{{< /stripe >}}
+{{< /gallery >}}
 
 <!-- Aree di competenza -->
 <section aria-label="Aree di competenza" class="py-20 sm:py-32">
@@ -56,11 +56,11 @@ backgroundImage: "/images/nuove/38.jpg"
   </div>
 </section>
 
-{{< stripe class="grid-cols-3 sm:grid-cols-4" >}}
+{{< gallery class="sm:grid-cols-4" >}}
   {{< image src="/images/nuove/49.jpg" class="col-span-1 sm:col-span-2" >}}
   {{< image src="/images/stelo-pistone.jpg" class="col-span-1" >}}
   {{< image src="/images/cilindro-collare.jpg" class="col-span-1" >}}
-{{< /stripe >}}
+{{< /gallery >}}
 
 <!-- Perchè scegliere Centro Cilindri -->
 <section aria-label="Perchè scegliere Centro Cilindri" class="py-20 sm:py-32">
@@ -104,11 +104,11 @@ backgroundImage: "/images/nuove/38.jpg"
   </div>
 </section>
 
-{{< stripe class="grid-cols-3 sm:grid-cols-4" >}}
+{{< gallery class="sm:grid-cols-4" >}}
   {{< image src="/images/nuove/41.jpg" class="col-span-1 sm:col-span-2" >}}
   {{< image src="/images/nuove/63.jpg" class="col-span-1" >}}
   {{< image src="/images/nuove/52.jpg" class="col-span-1" >}}
-{{< /stripe >}}
+{{< /gallery >}}
 
 <!-- I nostri clienti -->
 <section aria-label="I nostri clienti" class="py-20 sm:py-32">
