--- a/content/contatti.html
+++ b/content/contatti.html
@@ -4,8 +4,8 @@ heading: "Contatti"
 backgroundImage: "/images/macello.jpg"
 ---
 
-<section aria-label="Contatti" class="py-20 sm:py-32">
-  <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+<section aria-label="Contatti" class="px-4 sm:px-6 lg:px-8 py-20 sm:py-32">
+  <div class="mx-auto max-w-7xl">
     <p class="text-base/7 text-gray-800">La sede operativa di Centro Cilindri si trova a Macello, nelle vicinanze di Pinerolo, in provincia di Torino.</p>
     <div class="mt-8 text-gray-800">
       <p><strong>Centro Cilindri Srl</strong></p>
