--- a/content/servizi.html
+++ b/content/servizi.html
@@ -42,17 +42,17 @@ backgroundImage: "/images/cilindro-danieli.jpg"
 
 <!-- Urgenze o impianto fermo? -->
 <section class="relative isolate overflow-hidden px-6 lg:px-8 bg-slate-800">
-  <img src="/images/hero.jpg" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
+  <img src="/images/nuove/59.jpg" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
   <div class="mx-auto max-w-7xl py-28 sm:py-40 lg:py-48">
     <h2 class="text-3xl sm:text-4xl lg:text-5xl font-bold text-gray-200 tracking-tight">Urgenze o impianto fermo?</h2>
-    <div class="max-w-4xl mt-8 text-base/7 space-y-4 text-gray-300">
+    <div class="max-w-4xl mt-8 text-base/7 space-y-4 text-gray-200">
       <p>Garantiamo riparazioni in urgenza di cilindri idraulici e pneumatici per ripartire il prima possibile con la produzione, incrementando allo stesso tempo la vita utile futura del cilindro.</p>
       <p>Grazie alla rete di partner strategici possiamo inoltre fornire guarnizioni tornite in 24 ore fino a 1400 mm di diametro esterno<sup>*</sup></p>
     </div>
     <p class="mt-4 text-xs text-gray-300">*da verificare in base alla disponibilità produttiva dei fornitori</p>
   </div>
 
-  <div class="absolute w-full h-full inset-0 -z-10 bg-black/20 bg-gradient-to-t from-black/70" aria-hidden="true"></div>
+  <div class="absolute w-full h-full inset-0 -z-10 bg-black/40 bg-gradient-to-t from-black/70" aria-hidden="true"></div>
 </section>
 
 <!-- Centro Cilindri Digital Service -->
@@ -72,7 +72,6 @@ backgroundImage: "/images/cilindro-danieli.jpg"
       <div class="lg:pr-4">
         <div class="max-w-xl lg:max-w-lg text-base/7 space-y-4 text-gray-700">
           <p>Centro Cilindri Digital Service è una piattaforma gratuita riservata ai nostri clienti che permette di monitorare tutte le attività di revisione, riparazione e nuove costruzioni svolte da Centro Cilindri. E’ accessibile tramite PC, tablet e smartphone e, come un abito sartoriale, può essere adattato alle esigenze ed obiettivi della tua azienda.</p>
-          <p>Creiamo relazioni a lungo termine con i nostri clienti attraverso la condivisione e la trasparenza: per ogni cilindro è presente infatti una scheda generale con i principali dati dimensionali e applicativi ed uno storico al cui interno sono indicate le singole operazioni effettuate durante le manutenzioni e la lista di tutti i ricambi sostituiti, comprese le guarnizioni.</p>
         </div>
       </div>
     </div>
