--- a/content/chi-siamo.html
+++ b/content/chi-siamo.html
@@ -122,7 +122,7 @@ backgroundImage: "/images/nuove/38.jpg"
     <div class="mx-auto mt-8 lg:mt-16 grid grid-cols-1 gap-8 lg:grid-cols-2">
 
       <div class="relative overflow-hidden p-6 lg:p-8 rounded-2xl">
-        <img src="https://live.cdn.cms.sms-group.com/_processed_/0/d/csm_N-SMS2324-053-Einlaufseite-Vorgeruest_cc7eae032f.jpg" class="absolute w-full h-full inset-0 object-cover -z-10">
+        <img src="/images/industria.jpg" class="absolute w-full h-full inset-0 object-cover -z-10">
         <h3 class="text-lg sm:text-xl lg:text-2xl font-semibold tracking-tight text-gray-200">Industria</h3>
         <ul role="list" class="mt-8 space-y-2 text-base/6 text-gray-200">
           <li>Metallurgia</li>
