--- a/content/servizi.html
+++ b/content/servizi.html
@@ -43,7 +43,7 @@ backgroundImage: "/images/cilindro-danieli.jpg"
 <!-- Urgenze o impianto fermo? -->
 <section class="relative isolate overflow-hidden px-6 lg:px-8 bg-slate-800">
   <img src="/images/nuove/59.jpg" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
-  <div class="mx-auto max-w-7xl py-28 sm:py-40 lg:py-48">
+  <div class="mx-auto max-w-7xl py-28 sm:py-40 lg:py-48 xl:py-52">
     <h2 class="text-3xl sm:text-4xl lg:text-5xl font-bold text-gray-200 tracking-tight">Urgenze o impianto fermo?</h2>
     <div class="max-w-4xl mt-8 text-base/7 space-y-4 text-gray-200">
       <p>Garantiamo riparazioni in urgenza di cilindri idraulici e pneumatici per ripartire il prima possibile con la produzione, incrementando allo stesso tempo la vita utile futura del cilindro.</p>
@@ -65,7 +65,7 @@ backgroundImage: "/images/cilindro-danieli.jpg"
         </div>
       </div>
     </div>
-    <div class="-ml-12 -mt-12 p-12 lg:sticky lg:top-4 lg:col-start-2 lg:row-span-2 lg:row-start-1 lg:overflow-hidden">
+    <div class="-ml-12 -mt-12 p-6 lg:sticky lg:top-4 lg:col-start-2 lg:row-span-2 lg:row-start-1 lg:overflow-hidden">
       <img class="" src="/images/digital-service-mockup.png" alt="">
     </div>
     <div class="lg:col-span-2 lg:col-start-1 lg:row-start-2 lg:mx-auto lg:grid lg:w-full lg:max-w-7xl lg:grid-cols-2 lg:gap-x-8 lg:px-8">
