--- a/content/servizi.html
+++ b/content/servizi.html
@@ -5,7 +5,7 @@ backgroundImage: "/images/cilindro-danieli.jpg"
 ---
 
 <!-- Navigation -->
-<div class="top-0 overflow-x-auto whitespace-nowrap transition duration-100 z-50 bg-white shadow-sm p-4 sm:px-6 lg:px-8">
+<div class="top-0 overflow-x-auto whitespace-nowrap bg-white shadow-sm p-4 sm:px-6 lg:px-8">
   <div class="mx-auto max-w-7xl flex justify-between space-x-8 text-sm font-semibold leading-6 text-slate-900">
     <div class="flex space-x-8">
       <a href="#manutenzione">Manutenzione</a>
