--- a/content/chi-siamo.html
+++ b/content/chi-siamo.html
@@ -1,5 +1,6 @@
 ---
 title: "Chi siamo"
+description: "Offriamo soluzioni affidabili e su misura per la riparazione e costruzione di cilindri idraulici e pneumatici."
 heading: "Al servizio dell'industria"
 backgroundImage: "/images/nuove/38.jpg"
 ---
