--- a/content/contatti.html
+++ b/content/contatti.html
@@ -1,5 +1,6 @@
 ---
 title: "Contatti"
+description: "Centro Cilindri si impegna costantemente a rispondere alle richieste in modo rapido e competente."
 heading: "Contatti"
 backgroundImage: "/images/macello.jpg"
 ---
