--- a/content/servizi.html
+++ b/content/servizi.html
@@ -1,5 +1,6 @@
 ---
 title: "I nostri servizi"
+description: "Siamo il partner ideale per l’intero ciclo di vita dei cilindri, che include progettazione, fabbricazione, assistenza, manutenzione, fornitura guarnizioni e ricambi."
 heading: "Il partner ideale per l’intero ciclo di vita dei tuoi cilindri"
 backgroundImage: "/images/cilindro-danieli.jpg"
 ---
